--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="">WebStudio</a>
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -34,49 +34,49 @@
                 </ul>
                 <ul>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 0.jpg" alt="Технокряк" width="370">
+                        <h3>Технокряк</h3>
+                        <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 2.jpg" alt="Ресторан Seafood" width="370">
+                        <h3>Ресторан Seafood</h3>
+                        <p>Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 3.jpg" alt="Проект Prime" width="370">
+                        <h3>Проект Prime</h3>
+                        <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 4.jpg" alt="Проект Boxes" width="370">
+                        <h3>Проект Boxes</h3>
+                        <p>Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 5.jpg" alt="Inspiration has no Borders" width="370">
+                        <h3>Inspiration has no Borders</h3>
+                        <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 6.jpg" alt="Издание Limited Edition" width="370">
+                        <h3>Издание Limited Edition</h3>
+                        <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 7.jpg" alt="Проект LAB" width="370">
+                        <h3>Проект LAB</h3>
+                        <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p lang="en">Product Designer</p>
+                        <img src="./images/portfolio/img 8.jpg" alt="Growing Business" width="370">
+                        <h3>Growing Business</h3>
+                        <p>Приложение</p>
                     </li>
                 </ul>
             </section>
@@ -87,8 +87,7 @@
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/swVqKh3BSufT6jZ49" target="_blank" rel="noopener noreferrer">г. Киев,
-                        пр-т Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/swVqKh3BSufT6jZ49" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
