--- a/portfolio.html
+++ b/portfolio.html
@@ -34,47 +34,47 @@
                 </ul>
                 <ul>
                     <li>
-                        <img src="./images/portfolio/img 0.jpg" alt="Технокряк" width="370">
+                        <img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
                         <h3>Технокряк</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                        <img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                         <h3>Постер New Orlean vs Golden Star</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 2.jpg" alt="Ресторан Seafood" width="370">
+                        <img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370">
                         <h3>Ресторан Seafood</h3>
                         <p>Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 3.jpg" alt="Проект Prime" width="370">
+                        <img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370">
                         <h3>Проект Prime</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 4.jpg" alt="Проект Boxes" width="370">
+                        <img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370">
                         <h3>Проект Boxes</h3>
                         <p>Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 5.jpg" alt="Inspiration has no Borders" width="370">
+                        <img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370">
                         <h3>Inspiration has no Borders</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 6.jpg" alt="Издание Limited Edition" width="370">
+                        <img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370">
                         <h3>Издание Limited Edition</h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 7.jpg" alt="Проект LAB" width="370">
+                        <img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370">
                         <h3>Проект LAB</h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img 8.jpg" alt="Growing Business" width="370">
+                        <img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370">
                         <h3>Growing Business</h3>
                         <p>Приложение</p>
                     </li>
