--- a/portfolio.html
+++ b/portfolio.html
@@ -40,42 +40,42 @@
                     </li>
                     <li>
                         <img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370">
-                        <h3>Ресторан Seafood</h3>
+                        <h3>Ресторан <span lang="en">Seafood</span></h3>
                         <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370">
-                        <h3>Проект Prime</h3>
+                        <h3>Проект <span lang="en">Prime</span></h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370">
-                        <h3>Проект Boxes</h3>
+                        <h3>Проект <span lang="en">Boxes</span></h3>
                         <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370">
-                        <h3>Inspiration has no Borders</h3>
+                        <h3><span lang="en">Inspiration has no Borders</span></h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370">
-                        <h3>Издание Limited Edition</h3>
+                        <h3>Издание <span lang="en">Limited Edition</span></h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370">
-                        <h3>Проект LAB</h3>
+                        <h3>Проект <span lang="en">LAB</span></h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370">
-                        <h3>Growing Business</h3>
+                        <h3><span lang="en">Growing Business</span></h3>
                         <p>Приложение</p>
                     </li>
                 </ul>
