--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="">
+    <header class="header">
         <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
@@ -24,70 +24,70 @@
     </header>
     <main>
         <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+            <section class="hero">
+                <h1 class="hero-tittle">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="button">Заказать услугу</button>
             </section>
         </div>
-        <section>
-            <h2>Важное для бизнеса</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-tittle">Важное для бизнеса</h2>
+            <ul class="mainbusiness list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="tittle">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="tittle">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="tittle">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3  class="tittle">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="section">
+            <h2 class="section-tittle">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/about/aboutimg1.jpg" alt="Делаем HTML скелет сайта" width="370"></li>
                 <li><img src="./images/about/aboutimg2.jpg" alt="Задаем стилизацию CSS" width="370"></li>
                 <li><img src="./images/about/aboutimg3.jpg" alt="Адаптируем функционал под пользователя" width="370"></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-tittle">Наша команда</h2>
+            <ul class=" ourteam list">
                 <li>
                     <img src="./images/team/1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="tittle">Игорь Демьяненко</h3>
                     <p  lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team/2.jpg" alt="Ольга Репина" width="270">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="tittle">Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team/3.jpg" alt="Николай Тарасов" width="270">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="tittle">Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team/4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="tittle">Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="">WebStudio</a>
+    <footer class="footer">
+        <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
         <address>
-            <ul>
+            <ul class="list">
                 <li>
                     <a href="https://goo.gl/maps/swVqKh3BSufT6jZ49" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
