--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="">
+    <header class="header">
         <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
 
@@ -24,67 +24,67 @@
     </header>
     <main>
         <div>
-            <section>
-                <h1>Фильтры</h1>
-                <ul>
-                    <li><button type="button">Все</button></li>
-                    <li><button type="button">Веб-сайты</button></li>
-                    <li><button type="button">Приложения</button></li>
-                    <li><button type="button">Дизайн</button></li>
-                    <li><button type="button">Маркетинг</button></li>
+            <section class="section">
+                <h1 class="section-tittle">Портфолио</h1>
+                <ul class="filters list">
+                    <li><button type="button" class="button">Все</button></li>
+                    <li><button type="button" class="button">Веб-сайты</button></li>
+                    <li><button type="button" class="button">Приложения</button></li>
+                    <li><button type="button" class="button">Дизайн</button></li>
+                    <li><button type="button" class="button">Маркетинг</button></li>
                 </ul>
-                <ul>
+                <ul class="list">
                     <li>
                         <img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
-                        <h3>Технокряк</h3>
+                        <h3 class="section-tittle">Технокряк</h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <h3 class="section-tittle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370">
-                        <h3>Ресторан <span lang="en">Seafood</span></h3>
+                        <h3  class="section-tittle">Ресторан <span lang="en">Seafood</span></h3>
                         <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370">
-                        <h3>Проект <span lang="en">Prime</span></h3>
+                        <h3  class="section-tittle">Проект <span lang="en">Prime</span></h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370">
-                        <h3>Проект <span lang="en">Boxes</span></h3>
+                        <h3 class="section-tittle">Проект <span lang="en">Boxes</span></h3>
                         <p>Приложение</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370">
-                        <h3><span lang="en">Inspiration has no Borders</span></h3>
+                        <h3  class="section-tittle"><span lang="en">Inspiration has no Borders</span></h3>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370">
-                        <h3>Издание <span lang="en">Limited Edition</span></h3>
+                        <h3 class="section-tittle">Издание <span lang="en">Limited Edition</span></h3>
                         <p>Дизайн</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370">
-                        <h3>Проект <span lang="en">LAB</span></h3>
+                        <h3 class="section-tittle">Проект <span lang="en">LAB</span></h3>
                         <p>Маркетинг</p>
                     </li>
                     <li>
                         <img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370">
-                        <h3><span lang="en">Growing Business</span></h3>
+                        <h3 class="section-tittle"><span lang="en">Growing Business</span></h3>
                         <p>Приложение</p>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
-    <footer>
-        <a href="">WebStudio</a>
+    <footer class="footer">
+        <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
         <address>
             <ul>
                 <li>
