--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -18,14 +22,14 @@
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="header-contacts">+38 096 111 11 11</a>
 
     </header>
     <main>
         <div>
-            <section class="section">
-                <h1 class="section-tittle">Портфолио</h1>
+            <section class="portfolio">
+                <h1 class="portfolio-tittle">Портфолио</h1>
                 <ul class="filters list">
                     <li><button type="button" class="button">Все</button></li>
                     <li><button type="button" class="button">Веб-сайты</button></li>
@@ -33,68 +37,68 @@
                     <li><button type="button" class="button">Дизайн</button></li>
                     <li><button type="button" class="button">Маркетинг</button></li>
                 </ul>
-                <ul class="list">
+                <ul class="cards list">
                     <li>
-                        <img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
-                        <h3 class="section-tittle">Технокряк</h3>
-                        <p>Веб-сайт</p>
+                        <a href=""><img src="./images/portfolio/img.jpg" alt="Технокряк" width="370"></a>
+                        <h3 class="portfolio-tittle">Технокряк</h3>
+                        <p class="text">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                        <h3 class="section-tittle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                        <p>Дизайн</p>
+                        <a href=""><img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370"></a>
+                        <h3 class="portfolio-tittle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="text">Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370">
-                        <h3  class="section-tittle">Ресторан <span lang="en">Seafood</span></h3>
-                        <p>Приложение</p>
+                        <a href=""><img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370"></a>
+                        <h3  class="portfolio-tittle">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="text">Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370">
-                        <h3  class="section-tittle">Проект <span lang="en">Prime</span></h3>
-                        <p>Маркетинг</p>
+                        <a href=""><img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370"></a>
+                        <h3  class="portfolio-tittle">Проект <span lang="en">Prime</span></h3>
+                        <p class="text">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370">
-                        <h3 class="section-tittle">Проект <span lang="en">Boxes</span></h3>
-                        <p>Приложение</p>
+                        <a href=""><img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370"></a>
+                        <h3 class="portfolio-tittle">Проект <span lang="en">Boxes</span></h3>
+                        <p class="text">Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370">
-                        <h3  class="section-tittle"><span lang="en">Inspiration has no Borders</span></h3>
-                        <p>Веб-сайт</p>
+                        <a href=""><img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370"></a>
+                        <h3  class="portfolio-tittle"><span lang="en">Inspiration has no Borders</span></h3>
+                        <p class="text">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370">
-                        <h3 class="section-tittle">Издание <span lang="en">Limited Edition</span></h3>
-                        <p>Дизайн</p>
+                        <a href=""><img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370"></a>
+                        <h3 class="portfolio-tittle">Издание <span lang="en">Limited Edition</span></h3>
+                        <p class="text">Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370">
-                        <h3 class="section-tittle">Проект <span lang="en">LAB</span></h3>
-                        <p>Маркетинг</p>
+                        <a href=""><img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370"></a>
+                        <h3 class="portfolio-tittle">Проект <span lang="en">LAB</span></h3>
+                        <p  class="text">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370">
-                        <h3 class="section-tittle"><span lang="en">Growing Business</span></h3>
-                        <p>Приложение</p>
+                        <a href=""><img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370"></a>
+                        <h3 class="portfolio-tittle"><span lang="en">Growing Business</span></h3>
+                        <p class="text">Приложение</p>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer ground">
         <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
-        <address>
-            <ul>
+        <address class="footer-address">
+            <ul class="footer-list list">
                 <li>
-                    <a href="https://goo.gl/maps/swVqKh3BSufT6jZ49" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href="https://goo.gl/maps/swVqKh3BSufT6jZ49" target="_blank" rel="noopener noreferrer" class="footer-map">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111" class="footer-link">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
