Оформление текста и цвета

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div>
-            <section class="hero ground">
+            <section class="hero bcground">
                 <h1 class="hero-tittle">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="button">Заказать услугу</button>
             </section>
@@ -88,7 +88,7 @@
             </ul>
         </section>
     </main>
-    <footer class="footer ground">
+    <footer class="footer bcground">
         <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
         <address class="footer-address">
             <ul class="footer-list list">
