--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
             </section>
         </div>
     </main>
-    <footer class="footer ground">
+    <footer class="footer bcground">
         <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
         <address class="footer-address">
             <ul class="footer-list list">
