--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
         <nav>
             <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="" class="site-nav-link link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="site-nav-link link">Портфолио</a></li>
+                <li><a href="" class="site-nav-link link">Контакты</a></li>
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="header-contacts">+38 096 111 11 11</a>
+        <ul class="header-auth list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a></li>
+        </ul>
 
     </header>
     <main>
@@ -56,10 +58,10 @@
         </section>
         <section class="section">
             <h2 class="section-tittle">Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/about/aboutimg1.jpg" alt="Делаем HTML скелет сайта" width="370"></li>
-                <li><img src="./images/about/aboutimg2.jpg" alt="Задаем стилизацию CSS" width="370"></li>
-                <li><img src="./images/about/aboutimg3.jpg" alt="Адаптируем функционал под пользователя" width="370"></li>
+            <ul class="list">
+                <li class="item"><img src="./images/about/aboutimg1.jpg" alt="Делаем HTML скелет сайта" width="370"></li>
+                <li class="item"><img src="./images/about/aboutimg2.jpg" alt="Задаем стилизацию CSS" width="370"></li>
+                <li class="item"><img src="./images/about/aboutimg3.jpg" alt="Адаптируем функционал под пользователя" width="370"></li>
             </ul>
         </section>
         <section class="section">
