--- a/portfolio.html
+++ b/portfolio.html
@@ -16,76 +16,85 @@
         <nav>
             <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="./index.html" class="site-nav-link link">Студия</a></li>
+                <li><a href="" class="site-nav-link link current">Портфолио</a></li>
+                <li><a href="" class="site-nav-link link">Контакты</a></li>
             </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="header-contacts">+38 096 111 11 11</a>
+        <ul class="header-auth list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a></li>
+        </ul>
 
     </header>
     <main>
-        <div>
-            <section class="portfolio">
-                <h1 class="portfolio-tittle">Портфолио</h1>
-                <ul class="filters list">
-                    <li><button type="button" class="button">Все</button></li>
-                    <li><button type="button" class="button">Веб-сайты</button></li>
-                    <li><button type="button" class="button">Приложения</button></li>
-                    <li><button type="button" class="button">Дизайн</button></li>
-                    <li><button type="button" class="button">Маркетинг</button></li>
-                </ul>
-                <ul class="cards list">
-                    <li>
-                        <a href=""><img src="./images/portfolio/img.jpg" alt="Технокряк" width="370"></a>
+        <section class="portfolio">
+            <h1 class="portfolio-tittle">Портфолио</h1>
+            <ul class="filters list">
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button">Веб-сайты</button></li>
+                <li><button type="button" class="button">Приложения</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
+            </ul>
+            <ul class="cards list">
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img.jpg" alt="Технокряк" width="370">
                         <h3 class="portfolio-tittle">Технокряк</h3>
                         <p class="text">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img1.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                         <h3 class="portfolio-tittle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p class="text">Дизайн</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img2.jpg" alt="Ресторан Seafood" width="370">
                         <h3  class="portfolio-tittle">Ресторан <span lang="en">Seafood</span></h3>
                         <p class="text">Приложение</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img3.jpg" alt="Проект Prime" width="370">
                         <h3  class="portfolio-tittle">Проект <span lang="en">Prime</span></h3>
                         <p class="text">Маркетинг</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img4.jpg" alt="Проект Boxes" width="370">
                         <h3 class="portfolio-tittle">Проект <span lang="en">Boxes</span></h3>
                         <p class="text">Приложение</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img5.jpg" alt="Inspiration has no Borders" width="370">
                         <h3  class="portfolio-tittle"><span lang="en">Inspiration has no Borders</span></h3>
                         <p class="text">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img6.jpg" alt="Издание Limited Edition" width="370">
                         <h3 class="portfolio-tittle">Издание <span lang="en">Limited Edition</span></h3>
                         <p class="text">Дизайн</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="link"><img src="./images/portfolio/img7.jpg" alt="Проект LAB" width="370">
                         <h3 class="portfolio-tittle">Проект <span lang="en">LAB</span></h3>
                         <p  class="text">Маркетинг</p>
-                    </li>
-                    <li>
-                        <a href=""><img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370"></a>
+                    </a>
+                </li>
+                <li>
+                    <a href=""  class="link"><img src="./images/portfolio/img8.jpg" alt="Growing Business" width="370">
                         <h3 class="portfolio-tittle"><span lang="en">Growing Business</span></h3>
                         <p class="text">Приложение</p>
-                    </li>
-                </ul>
-            </section>
-        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer class="footer ground">
         <a href="" class="logo">Web<span class="logocolor">Studio</span></a>
